"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-01-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-35:
	  Added new family of commands to assert the absence of nodes
		with specific statuses/criteria (always fatal error).
		new commands:
		no-status, no-status-interference, no-unused-nodes,
		no-unknown-inputs, no-unknown-inputs-fanout, 
		no-unknown-undriven-fanin, no-unknown-outputs,
		no-unknown-fanout.
	  Documented, test cases added.


2010-12-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-34:
	  hacprsim: added support for signed binary integer interpretation
		of radix-2 bundled channels.
	  New commands: channel-signed, channel-unsigned.
	  Documented, test cases added.


2010-10-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-33:
	  hacknet: added support for more optimistic parasitic perimiter
		values, subtracting out gate edges.
		option: -f fet_perimeter_gate_edge
			default: 1, override: 0
	  Added new test case.  Updated documentation.


2010-10-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-32:
	  hacprsim: safeguard against ill-effects of aliasing data-rails
		in prsim channels by rejecting them with a diagnostic.
	  Added test cases.


2010-10-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-31:
	  Create dumps now print implicit attributes for channels,
		needed for debugging new diagnostic bug.
		No functional change this revision.  Test cases updated.


2010-09-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-30:
	  HAC: now supports optional string message with SPEC invariants, 
		e.g.: $(x | y, "one of these must be true at all times!")
		parser, AST, middle-end updated, object version bumped.