@@ -1,0 +1,108 @@
+# "cbit-08.prsimrc"
+# @haco@ cbit.haco-c
+
+watchall
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+echo random pair...
+set-pair-random p.f p.t
+cycle
+
+
