@@ -1,0 +1,68 @@
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+random pair... 
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
+random pair... 
+	0	p.f : 1
+	0	p.t : 0
+random pair... 
+random pair... 
+	0	p.f : 0
+	0	p.t : 1
