@@ -1,0 +1,96 @@
+# "inv-37.prsimrc"
+# @haco@ inv.haco-c
+
+watchall
+
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+echo random value...
+set a ?
+cycle
+
