@@ -1,0 +1,72 @@
+random value... 
+	0	a : 0
+	10	b : 1	[by a:=0]
+	20	c : 0	[by b:=1]
+random value... 
+	20	a : 1
+	30	b : 0	[by a:=1]
+	40	c : 1	[by b:=0]
+random value... 
+	40	a : 0
+	50	b : 1	[by a:=0]
+	60	c : 0	[by b:=1]
+random value... 
+random value... 
+random value... 
+random value... 
+random value... 
+random value... 
+random value... 
+	60	a : 1
+	70	b : 0	[by a:=1]
+	80	c : 1	[by b:=0]
+random value... 
+	80	a : 0
+	90	b : 1	[by a:=0]
+	100	c : 0	[by b:=1]
+random value... 
+random value... 
+	100	a : 1
+	110	b : 0	[by a:=1]
+	120	c : 1	[by b:=0]
+random value... 
+random value... 
+random value... 
+random value... 
+random value... 
+	120	a : 0
+	130	b : 1	[by a:=0]
+	140	c : 0	[by b:=1]
+random value... 
+random value... 
+	140	a : 1
+	150	b : 0	[by a:=1]
+	160	c : 1	[by b:=0]
+random value... 
+	160	a : 0
+	170	b : 1	[by a:=0]
+	180	c : 0	[by b:=1]
+random value... 
+	180	a : 1
+	190	b : 0	[by a:=1]
+	200	c : 1	[by b:=0]
+random value... 
+random value... 
+	200	a : 0
+	210	b : 1	[by a:=0]
+	220	c : 0	[by b:=1]
+random value... 
+random value... 
+	220	a : 1
+	230	b : 0	[by a:=1]
+	240	c : 1	[by b:=0]
+random value... 
+	240	a : 0
+	250	b : 1	[by a:=0]
+	260	c : 0	[by b:=1]
+random value... 
+	260	a : 1
+	270	b : 0	[by a:=1]
+	280	c : 1	[by b:=0]
+random value... 
+random value... 
